@@ -12,6 +12,7 @@ define('IMAGEPICKER_ORIG_DIR', 'orig');
 define('IMAGEPICKER_WATERMARK_DIR', 'watermarks');
 define('IMAGEPICKER_ADMIN_PATH', 'admin/settings/imagepicker');
 define('IMAGEPICKER_PATH', drupal_get_path('module', 'imagepicker'));
+define('IMAGEPICKER_INSERT_TEMPLATE', 'imagepicker_insert_template.txt');
 // Minimum PHP version for extension
 define('IMAGEPICKER_UPLOAD_STATUS_MIN_PHP', '5.2.1');
 define('IMAGEPICKER_UPLOAD_ID', 'UPLOAD_IDENTIFIER');
@@ -616,6 +617,7 @@ function imagepicker_block_form($i) {
     '#default_value' => variable_get('imagepicker_galleryblocks_link_'. $i, t('Photo Gallery !i', array('!i' => $i))),
     '#required' => TRUE,
     '#description' => t('Set the link text for this block. Can contain html.'),
+    '#maxlength' => 255,
   );
   $form['imagepicker_galleryblocks_group_'. $i] = array(
     '#type' => 'select',
