@@ -1,3 +1,7 @@
+Image Picker for D6 in 6.x-2.x, 20011-04-22
+------------------------------------
+by hutch, added insert template
+
 Image Picker for D6 in 6.x-2.x, 20011-03-31
 ------------------------------------
 by hutch, cleanup for new release
